added animations with framer-motion

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.3.24",
     "html-to-react": "^1.7.0",
     "sass": "^1.77.8",
     "typescript": "^5"
