--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.24",
     "html-to-react": "^1.7.0",
+    "react-typed": "^2.0.12",
     "sass": "^1.77.8",
     "typescript": "^5"
   }
